src/test/ui/issues/issue-19883.stderr
error[E0576]: cannot find associated type `Dst` in trait `From`
  --> $DIR/issue-19883.rs:9:30
   |
LL |         <Dst as From<Self>>::Dst
   |                              ^^^ not found in `From`

error: aborting due to previous error

